add K8s manifests
